// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonA11y component renders, children 1`] = `
<span
  aria-label="Mock Label"
  className="mock-className"
  onClick={[MockFunction]}
  onKeyDown={[Function]}
  role="button"
  tabIndex="0"
>
  Click me
</span>
`;

exports[`ButtonA11y component renders, no children 1`] = `
<span
  aria-label="Mock Label"
  className="mock-className"
  onClick={[MockFunction]}
  onKeyDown={[Function]}
  role="button"
  tabIndex="0"
/>
`;

exports[`ButtonA11y component renders, ref passed in 1`] = `
<ButtonA11y
  aria-label="Mock Label"
  className="mock-className"
  element="span"
  forwardedRef={
    Object {
      "current": <span
        aria-label="Mock Label"
        class="mock-className"
        role="button"
        tabindex="0"
      />,
    }
  }
  onClick={[MockFunction]}
  onKeyDown={[Function]}
  strictMode={true}
>
  <span
    aria-label="Mock Label"
    className="mock-className"
    onClick={[MockFunction]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
  />
</ButtonA11y>
`;

exports[`ButtonA11y component renders, span element 1`] = `
<span
  aria-label="Mock Label"
  className="mock-className"
  onClick={[MockFunction]}
  onKeyDown={[Function]}
  role="button"
  tabIndex="0"
/>
`;

exports[`ButtonA11y component renders, strict mode disabled 1`] = `
<span
  aria-label="Mock Label"
  className="mock-className"
  onClick={[MockFunction]}
  onKeyDown={[Function]}
  role="button"
  tabIndex="0"
/>
`;

exports[`ButtonA11y container renders 1`] = `
<ButtonA11y
  aria-label="Mock Label"
  className="mock-className"
  element="span"
  forwardedRef={null}
  onClick={[MockFunction]}
  onKeyDown={[Function]}
  strictMode={true}
/>
`;
